Store complete package dict in activity. Store user name at time of change. Show historic package versions.

--- a/ckan/templates/package/read_base.html
+++ b/ckan/templates/package/read_base.html
@@ -10,8 +10,10 @@
 {% endblock -%}
 
 {% block content_action %}
-  {% if h.check_access('package_update', {'id':pkg.id }) %}
-    {% link_for _('Manage'), controller='package', action='edit', id=pkg.name, class_='btn', icon='wrench' %}
+  {% if not c.is_activity_archive %}
+    {% if h.check_access('package_update', {'id':pkg.id }) %}
+      {% link_for _('Manage'), controller='package', action='edit', id=pkg.name, class_='btn', icon='wrench' %}
+    {% endif %}
   {% endif %}
 {% endblock %}
 
