--- a/ckan/templates/package/read.html
+++ b/ckan/templates/package/read.html
@@ -11,6 +11,17 @@
         {{ _('Private') }}
       </span>
     {% endif %}
+    {% block package_archive_notice %}
+    {% if c.is_activity_archive %}
+    <div class="alert alert-error">
+      {% trans url=h.url_for(controller='package', action='read', id=pkg.id) %}
+      You're currently viewing an old version of this dataset. Some resources
+      may no longer exist or the dataset may not display correctly. To see the
+      current version, click <a href="{{ url }}">here</a>.
+      {% endtrans %}
+    </div>
+    {% endif %}
+    {% endblock %}
     <h1>
       {% block page_heading %}
         {{ h.dataset_display_name(pkg) }}
